# simdb

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.sh  vscode_debug.sh  vscode_release.sh
cmake/: simdb-config.cmake
include/: simdb_fwd.hpp
include/simdb/: Errors.hpp  Exceptions.hpp
include/simdb/async/: AsyncTaskQueue.hpp  AsyncTaskThread.hpp  ConcurrentQueue.hpp  TimerThread.hpp
include/simdb/collection/: Any.hpp  BlobSerializer.hpp  CollectionBase.hpp  IterableStructs.hpp  ScalarStats.hpp  ScalarStructs.hpp  Scalars.hpp  Structs.hpp  TimeLogger.hpp  TimeseriesCollector.hpp
include/simdb/constellations/: StatConstellation.hpp
include/simdb/schema/: Blob.hpp  ColumnMetaStructs.hpp  ColumnTypedefs.hpp  ColumnValue.hpp  DatabaseTypedefs.hpp  GeneralMetaStructs.hpp  Schema.hpp  SchemaDef.hpp
include/simdb/serialize/: CollectionBuffer.hpp  CollectionMgr.hpp  CollectionPoints.hpp  DatabaseThread.hpp  Pipeline.hpp  Serialize.hpp  ThreadedSink.hpp
include/simdb/sqlite/: Connection.hpp  Constellation.hpp  ConstellationBase.hpp  Constraints.hpp  DatabaseManager.hpp  SQLiteConnection.hpp  SQLiteIterator.hpp  (+7 more)
python/: argos.py  constellations.py  simdb_collections.py  stats_collections.py
python/viewer/: README.md
src/: Pipeline.cpp
test/: CMakeLists.txt  TestingMacros.cmake
test/Collection/: CMakeLists.txt  main.cpp
test/Constellations/: CMakeLists.txt  main.cpp
test/PerfDiagnostics/: CMakeLists.txt  main.cpp
test/SQLiteConnection/: CMakeLists.txt  main.cpp
test/ScalarConstellations/: CMakeLists.txt
test/Schema/: CMakeLists.txt  main.cpp
test/Thread/: CMakeLists.txt  main.cpp
(+95 files in other folders)
